<resources>

    <string name="app_name">Расписание</string>
    <string name="action_settings">Settings</string>
    <string name="service_name">Schedule service</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="select_faculty">Выберите факультет:</string>
    <string name="select_specialty">Выберите специальность:</string>
    <string name="select_course">Выберите курс:</string>
    <string name="select_group">Выберите группу:</string>
    <string name="title_activity_group_selection">GroupSelectionActivity</string>
    <string name="title_activity_main_activity_new">MainActivityNew</string>
    <string name="btnStudentName">Студент</string>
    <string name="btnTeacherName">Преподаватель</string>
    <string name="btnStewardName">Староста</string>

    <string name="cancel">Отменена</string>
    <string name="title_activity_class_details">class_details</string>
    <string name="title_activity_teacher_list">teacher_list</string>



</resources>
